--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/SQL-COVID-Data-Exploration">SQL <br />
+									<h2><a href="https://github.com/ahmedelsawy-as/SQL-COVID-Data-Exploration">SQL <br />
 										COVID-19 Data Exploration</a></h2>
 									<p>•Utilized SQL to explore data on COVID-19 (coronavirus pandemic) from Our World in Data.<br />
 										•Created 18 SQL queries to investigate the dataset using skills like CTE's, Temp Tables, Windows Functions, Aggregate Functions, Creating Views, and Converting Data Types.<br />
 									•Obtained important insights, such as the wide gap in vaccination rates, infection rates, and death rates between countries, having Yemen in the worst position of all covid criteria and visualized my insight using tableau.</p>
 								</header>
-								<a href="https://github.com/ahmedelsawy-as/ahmedelsawy/SQL-COVID-Data-Exploration" class="image main"><img src="images/sql.jpg" alt="" /></a>
+								<a href="https://github.com/ahmedelsawy-as/SQL-COVID-Data-Exploration" class="image main"><img src="images/sql.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/SQL-COVID-Data-Exploration" class="button large">View Project</a></li>
+									<li><a href="https://github.com/ahmedelsawy-as/SQL-COVID-Data-Exploration" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -82,25 +82,25 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Movie-Data-Exploration-and-Correlation-in-Python-/blob/main/Movie%20Data%20Exploration%20and%20Correlation%20in%20Python%20.ipynb">Python<br />
+										<h2><a href="https://github.com/ahmedelsawy-as/Movie-Data-Exploration-and-Correlation-in-Python-/blob/main/Movie%20Data%20Exploration%20and%20Correlation%20in%20Python%20.ipynb">Python<br />
 											Movie Data Exploration and Correlation </a></h2>
 									</header>
-									<a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Movie-Data-Exploration-and-Correlation-in-Python-/blob/main/Movie%20Data%20Exploration%20and%20Correlation%20in%20Python%20.ipynb" class="image fit"><img src="images/movie.jpg" alt="" /></a>
+									<a href="https://github.com/ahmedelsawy-as/Movie-Data-Exploration-and-Correlation-in-Python-/blob/main/Movie%20Data%20Exploration%20and%20Correlation%20in%20Python%20.ipynb" class="image fit"><img src="images/movie.jpg" alt="" /></a>
 									<p>• Utilized NumPy, Pandas, Matplotlib, and Seaborn on Python to clean and perform exploratory data analysis on the dataset.
 
 										• Created 5 different visualizations to investigate the correlation between variables.
 										
 										• Obtained useful insights, such as movie budget and votes have highest correlation to movie gross earnings.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Movie-Data-Exploration-and-Correlation-in-Python-/blob/main/Movie%20Data%20Exploration%20and%20Correlation%20in%20Python%20.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/ahmedelsawy-as/Movie-Data-Exploration-and-Correlation-in-Python-/blob/main/Movie%20Data%20Exploration%20and%20Correlation%20in%20Python%20.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Project-Explore-US-Bikeshare-Data/blob/main/bikeshare_2.py">Python<br />
+										<h2><a href="https://github.com/ahmedelsawy-as/Project-Explore-US-Bikeshare-Data/blob/main/bikeshare_2.py">Python<br />
 											Explore some US Bikeshare Data </a></h2>
 									</header>
-									<a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Project-Explore-US-Bikeshare-Data/blob/main/bikeshare_2.py" class="image fit"><img src="images/bikeshare.jpg" alt="" /></a>
+									<a href="https://github.com/ahmedelsawy-as/Project-Explore-US-Bikeshare-Data/blob/main/bikeshare_2.py" class="image fit"><img src="images/bikeshare.jpg" alt="" /></a>
 									<p>•	Utilized NumPy and Pandas on Python to perform exploratory data analysis on the data from a bike-sharing company for three major cities in the United States—Chicago, New York City, and Washington. 
 
 										•	Wrote Python code to import the data and answer interesting questions about it by computing descriptive statistics and taking in raw input to create an interactive experience in the terminal to present these statistics. 
@@ -108,35 +108,35 @@
 										•	Obtained useful insights, such as that bikes were most popular at 5 PM on weekdays and Tuesday was the most common day of the week in Chicago.
 										</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Project-Explore-US-Bikeshare-Data/blob/main/bikeshare_2.py" class="button">View Project</a></li>
+										<li><a href="https://github.com/ahmedelsawy-as/Project-Explore-US-Bikeshare-Data/blob/main/bikeshare_2.py" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/SQL-NashvilleHousing-Data-Cleansing/blob/main/Data%20Cleansing%20Project.sql">SQL<br />
+										<h2><a href="https://github.com/ahmedelsawy-as/SQL-NashvilleHousing-Data-Cleansing/blob/main/Data%20Cleansing%20Project.sql">SQL<br />
 											Nashville Housing Data Cleansing</a></h2>
 									</header>
-									<a href="https://github.com/ahmedelsawy-as/ahmedelsawy/SQL-NashvilleHousing-Data-Cleansing/blob/main/Data%20Cleansing%20Project.sql" class="image fit"><img src="images/nashville.jpg" alt="" /></a>
+									<a href="https://github.com/ahmedelsawy-as/SQL-NashvilleHousing-Data-Cleansing/blob/main/Data%20Cleansing%20Project.sql" class="image fit"><img src="images/nashville.jpg" alt="" /></a>
 									<p>•	Utilized SQL to explore data. 
 										•	Created 26 SQL queries to investigate & clean the dataset 
 										•	Using skills CTE's, Temp Tables, Windows Functions, Aggregate Functions, Creating Views, and Converting Data Types 
 										</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/SQL-NashvilleHousing-Data-Cleansing/blob/main/Data%20Cleansing%20Project.sql" class="button">View Project</a></li>
+										<li><a href="https://github.com/ahmedelsawy-as/SQL-NashvilleHousing-Data-Cleansing/blob/main/Data%20Cleansing%20Project.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Data-Analysis-Project-Investigate-a-Dataset-Medical-Appointment-No-Shows-/blob/main/Project_Investigate_a_Dataset%20(Medical%20Appointment%20No-Shows).ipynb">Python<br />
+										<h2><a href="https://github.com/ahmedelsawy-as/Data-Analysis-Project-Investigate-a-Dataset-Medical-Appointment-No-Shows-/blob/main/Project_Investigate_a_Dataset%20(Medical%20Appointment%20No-Shows).ipynb">Python<br />
 											Investigate Brazilian medical appointments Dataset </a></h2>
 									</header>
-									<a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Data-Analysis-Project-Investigate-a-Dataset-Medical-Appointment-No-Shows-/blob/main/Project_Investigate_a_Dataset%20(Medical%20Appointment%20No-Shows).ipynb" class="image fit"><img src="images/doctor.jpg" alt="" /></a>
+									<a href="https://github.com/ahmedelsawy-as/Data-Analysis-Project-Investigate-a-Dataset-Medical-Appointment-No-Shows-/blob/main/Project_Investigate_a_Dataset%20(Medical%20Appointment%20No-Shows).ipynb" class="image fit"><img src="images/doctor.jpg" alt="" /></a>
 									<p>•	Utilized NumPy and Pandas on Python to clean and perform exploratory data analysis on the data from Brazilian medical appointments dataset focused on whether the person who made a doctor appointment failed to show up or not.
 										•	Created 24 different visualizations to investigate the bivariate and multivariate relationships between variables using Matplotlib and Seaborn packages on Python
 										•	Stated research questions and obtained interesting insights, such as the majority of appointments were made by females and that SMS's did not increase attendance.
 										</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/ahmedelsawy-as/ahmedelsawy/Data-Analysis-Project-Investigate-a-Dataset-Medical-Appointment-No-Shows-/blob/main/Project_Investigate_a_Dataset%20(Medical%20Appointment%20No-Shows).ipynb" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/ahmedelsawy-as/Data-Analysis-Project-Investigate-a-Dataset-Medical-Appointment-No-Shows-/blob/main/Project_Investigate_a_Dataset%20(Medical%20Appointment%20No-Shows).ipynb" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
@@ -200,7 +200,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/sawy/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-									<li><a href="https://github.com/ahmedelsawy-as/ahmedelsawy" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/ahmedelsawy-as" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://twitter.com/ahm_alsawy" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								</ul>
 							</section>
