--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Ahmed ElSawy<br />
-							Portfolio</h1>
-							<h2>Data Analyst</h2>
+						<h1>Ahmed ElSawy</h1>
+							<h2>Data Analyst <br /> Expert pharmacist</h2>
 							<p>Awesome! you are in the right place. Welcome to my portfolio page, I hope you enjoy exploring it. 
 								</p>
 								 <p>Python, SQL, tableau and Excel are skills that I have. 
 									Passionate about data analytics, I am a pharmacist turned data analyst.
 									 This wide medical and analytical background fueled my fascination with quality and precision. 
-									 <a href="https://www.linkedin.com/in/sawy/">@AhmedElSawy</a> .</p>
+									 <a href="https://www.linkedin.com/in/sawy/">@AhmedElSawy</a> .
+									 <a href="https://www.linkedin.com/in/sawy/" class="image main"><img src="images/DSC_0017 copy.jpg" alt="" /></a> </p>
+
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,9 +37,11 @@
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo">Ahmed ElSawy</a>
+
 					</header>
 
 				<!-- Nav -->
+
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
@@ -55,6 +58,7 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
+
 								<header class="major">
 									<h2><a href="https://github.com/ahmedelsawy-as/SQL-COVID-Data-Exploration">SQL <br />
 										COVID-19 Data Exploration</a></h2>
